<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:weightSum="10">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/bgHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/side_nav_bar_alt" />
        <ImageButton
            android:id="@+id/btnCerrarSession"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_power_settings"
            android:background="@null"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        app:alignmentMode="alignMargins"
        app:columnCount="2"
        app:columnOrderPreserved="false"
        app:rowCount="3">
        <!-- Row 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/btnSincronizar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:baselineAligned="false"
                    android:src="@drawable/ic_dashboard_sync" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sincronizar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/btnCosechar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:src="@drawable/ic_dashboard_harvest" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cosechar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Row 2 -->
        <android.support.v7.widget.CardView
            android:id="@+id/btnPaletizar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:src="@drawable/ic_dashboard_palletize" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paletizar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/btnDespachar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:src="@drawable/ic_dashboard_despachar" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/despachar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Row 3 -->
        <android.support.v7.widget.CardView
            android:id="@+id/btnRecepcionar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:src="@drawable/ic_dashboard_recepcionar" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recepcionar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/btnLimpiar"
            style="@style/AppTheme.Dashboard.CardViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <LinearLayout
                style="@style/AppTheme.Dashboard.LinearLayoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/AppTheme.Dashboard.ImageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_menu_height_default"
                    android:src="@drawable/ic_dashboard_clear" />
                <TextView
                    style="@style/AppTheme.Dashboard.TitleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limpiar"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.GridLayout>
</LinearLayout>