<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/selFundo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/lblFundo"
                    style="@style/AppTheme.Fragment.Label.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fundo"
                    android:textColor="@color/colorPrimary" />
                <TextView
                    android:id="@+id/txtFundo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/selLote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/lblLote"
                    style="@style/AppTheme.Fragment.Label.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turno"
                    android:textColor="@color/colorPrimary" />
                <TextView
                    android:id="@+id/txtLote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/selCantPersonas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/lblCantPersonas"
                    style="@style/AppTheme.Fragment.Label.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad_de_personas"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/eTxtCantPersonas"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:enabled="false"
                    android:text="1"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cBoxEditarCantPersonas"
                    android:layout_width="match_parent"
                    android:text="Editar Cantidad de Personas"
                    android:textSize="12sp"
                    android:textColor="#666666"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/lblInfo"
            style="@style/AppTheme.Fragment.Label.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/presione_icono_flotante_iniciar_lecturado_qr" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnLecturar"
        android:layout_width="64sp"
        android:layout_height="64sp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16sp"
        android:src="@drawable/ic_check" />
</android.support.design.widget.CoordinatorLayout>